# vision_firmware

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
aws_libraries/coreMQTT-Agent/coreMQTT-Agent/source/dependency/coreMQTT/source/: core_mqtt.c
main/: CMakeLists.txt  Kconfig.projbuild  __base__.hpp  app_main.cpp  idf_component.yml
main/button/: button.cpp  button.hpp
main/camera/: camera.c  camera.cpp  camera.h  camera.hpp
main/face_recog/: face_recog.cpp  face_recog.hpp
main/fingerprint/: fingerprint.cpp  fingerprint.hpp  r307.c  r307.h
main/lcd/: custom.c  custom.h  events_init.c  events_init.h  gui_guider.c  gui_guider.h  gui_logic_handle.cpp  gui_logic_handle.hpp  gui_logic_utils.c  gui_logic_utils.h  lcd.cpp  lcd.hpp  lvgl_demo_ui.c  lvgl_demo_ui.h  setup_scr_attendance_screen.c  setup_scr_connect_screen.c  setup_scr_finger_enroll_screen.c  setup_scr_finish_screen.c  setup_scr_loader_screen_dwnreport.c  setup_scr_loader_screen_dwntemplate.c  setup_scr_loader_screen_uptemplate.c  setup_scr_main_screen.c  setup_scr_menu_screen.c  setup_scr_pw_enter_screen.c  setup_scr_role_screen.c  setup_scr_usrdata_screen.c  setup_scr_usrinfo_screen.c  setup_src_data_screen.c
main/lcd/asset/: ready.c
main/lcd/assets/: wifi.c  wifi_off.c
main/network/: demo_config.h  http_client.cpp  http_client.hpp  httpd.cpp  httpd.hpp  mqtt_client.cpp  mqtt_client.hpp  ntp_time.cpp  ntp_time.hpp  smartconfig_wifi.c  smartconfig_wifi.cpp  smartconfig_wifi.h  smartconfig_wifi.hpp  websocket_client.cpp  websocket_client.hpp  wifi.c  wifi.h
main/network/www/: index.html
main/sdcard/: sdcard.cpp  sdcard.hpp
main/sqlite_db/: sqlite_db.cpp  sqlite_db.hpp
main/usb_msc/: usb_msc.cpp  usb_msc.hpp
main/utils/: utils.cpp  utils.hpp
